<resources>
    <string name="app_name">Online Bookshop</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="lists">Lists</string>
    <string name="profile">Profile</string>
    <string name="greetings">Good Morning, Mahmoud!</string>
    <string name="let_s_find_books">Let\'s Find Books</string>
    <string name="top_categories">Top Categories</string>
    <string name="view_all">View all</string>
    <string name="trending_books_today">Trending Books Today</string>
    <string name="our_best_authors">Our Best Authors</string>
    <string name="random">Confused? There is a random book</string>
    <string name="book_title">Book Title</string>
    <string name="description">Description</string>
    <string name="more_info">More Info</string>
    <string name="search">Search</string>
    <string name="category">C\na\nt\ne\ng\no\nr\ny\nC\na\nt\ne\ng\no\nr\ny\nC\na\nt\ne\ng\no\nr\ny\n</string>

    <string name="register">REGISTER</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="signup_login_hint">Already have an account?</string>
    <string name="login_signup_hint">New User? Signup now</string>
    <string name="name_hint">Name</string>
    <string name="mobile_number_hint">Mobile Number</string>
    <string name="forgot_password">Forgot your password?</string>
</resources>