<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/main_menu_home"
        android:icon="@drawable/navbar_home_selector"
        android:title="@string/home"
        app:cnb_backgroundColor="@color/primary_variant_color"
        app:cnb_iconColor="@color/on_variant_color"
        app:cnb_iconTintMode="src_in"
        app:cnb_textColor="@color/on_variant_color" />

    <item
        android:id="@+id/main_menu_search"
        android:icon="@drawable/navbar_search_selector"
        android:title="@string/search"
        app:cnb_backgroundColor="@color/primary_variant_color"
        app:cnb_iconColor="@color/on_variant_color"
        app:cnb_iconTintMode="src_in"
        app:cnb_textColor="@color/on_variant_color" />

    <item
        android:id="@+id/main_menu_categories"
        android:icon="@drawable/navbar_categories_selector"
        android:title="@string/categories"
        app:cnb_backgroundColor="@color/primary_variant_color"
        app:cnb_iconColor="@color/on_variant_color"
        app:cnb_iconTintMode="src_in"
        app:cnb_textColor="@color/on_variant_color" />

    <item
        android:id="@+id/main_menu_lists"
        android:icon="@drawable/navbar_lists_selector"
        android:title="@string/lists"
        app:cnb_backgroundColor="@color/primary_variant_color"
        app:cnb_iconColor="@color/on_variant_color"
        app:cnb_iconTintMode="src_in"
        app:cnb_textColor="@color/on_variant_color" />


</menu>