<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/horizontal_padding"
    android:paddingTop="@dimen/vertical_padding"
    android:paddingBottom="75dp">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/home_profile_btn"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:contentDescription="TODO"
                android:padding="12dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_logout"
                app:layout_constraintBottom_toBottomOf="@+id/textView4"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/home_greetings_tv" />

            <TextView
                android:id="@+id/home_greetings_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/averia_sans_libre_bold"
                android:text="@string/greetings"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/rail_bold"
                android:text="@string/let_s_find_books"
                android:textAllCaps="false"
                android:textSize="28sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/home_greetings_tv" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/rail_bold"
                android:text="@string/top_categories"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <Button
                android:id="@+id/home_category_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/averia_sans_libre_bold"
                android:letterSpacing="0"
                android:text="@string/view_all"
                android:textAllCaps="false"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
                app:layout_constraintEnd_toEndOf="parent" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/home_category_rv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                tools:itemCount="1"
                tools:listitem="@layout/item_category_book"
                tools:visibility="gone" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/rail_bold"
                android:text="@string/trending_books_today"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/home_category_rv" />
            <Button
                android:id="@+id/home_trend_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/averia_sans_libre_bold"
                android:letterSpacing="0"
                android:text="@string/view_all"
                android:textAllCaps="false"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/home_trending_shimmer_layout"
                android:layout_width="0dp"
                android:layout_height="559dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/home_trend_btn">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <include layout="@layout/item_book_vertical_shimmer" />

                    <include layout="@layout/item_book_vertical_shimmer" />

                    <include layout="@layout/item_book_vertical_shimmer" />

                    <include layout="@layout/item_book_vertical_shimmer" />

                    <include layout="@layout/item_book_vertical_shimmer" />

                    <include layout="@layout/item_book_vertical_shimmer" />

                    <include layout="@layout/item_book_vertical_shimmer" />

                    <include layout="@layout/item_book_vertical_shimmer" />

                    <include layout="@layout/item_book_vertical_shimmer" />

                    <include layout="@layout/item_book_vertical_shimmer" />
                </LinearLayout>

            </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/home_trend_rv"
                android:layout_width="0dp"
                android:layout_height="559dp"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/home_trend_btn"
                tools:itemCount="1"
                tools:listitem="@layout/item_book_vertical"
                tools:visibility="gone" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/rail_bold"
                android:text="@string/random"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/home_trending_shimmer_layout" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/home_random_shimmer_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <include
                    android:id="@+id/include"
                    layout="@layout/item_random_book_shimmer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView10" />
                </LinearLayout>

            </com.facebook.shimmer.ShimmerFrameLayout>

            <LinearLayout
                android:id="@+id/home_random_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10">

                <include layout="@layout/item_random_book" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/rail_bold"
                android:text="@string/our_best_authors"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/home_random_shimmer_layout" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/home_authors_rv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                tools:itemCount="1"
                tools:listitem="@layout/item_author" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>